--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+	width: 7px;
+	color: #33ccff;
+	transition: all 0.4s ease;
+}
+::-webkit-scrollbar-thumb {
+	background: #33ccff;
+	border-radius: 7px;
+	width: 7px;
+	transition: all 0.4s ease;
+}
+::-webkit-scrollbar-track {
+	background: #f2f2f2;
+	border-radius: 7px;
+	width: 7px;
+}
