--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-	width: 7px;
-	color: #33ccff;
-	transition: all 0.4s ease;
+    width: 7px;
+    color: #33ccff;
+    transition: all 0.4s ease;
 }
 ::-webkit-scrollbar-thumb {
-	background: #33ccff;
-	border-radius: 7px;
-	width: 7px;
-	transition: all 0.4s ease;
+    background: #33ccff;
+    border-radius: 7px;
+    width: 7px;
+    transition: all 0.4s ease;
 }
 ::-webkit-scrollbar-track {
-	background: #f2f2f2;
-	border-radius: 7px;
-	width: 7px;
+    background: #f2f2f2;
+    border-radius: 7px;
+    width: 7px;
 }
