--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html, body {
+    scroll-behavior: smooth;
+}
+
 ::-webkit-scrollbar {
     width: 7px;
     color: #33ccff;
